deploy: d3e8a8ad2789b30b2c6eafb7024f64d3b5e95c54

--- a/nodesnim/core/circle2.html
+++ b/nodesnim/core/circle2.html
@@ -127,6 +127,8 @@ function main() {
     title="contains(self: Circle2Ref; vec2: Vector2Ref): bool"><wbr />contains<span class="attachedType">Circle2Ref</span></a></li>
   <li><a class="reference" href="#contains%2CCircle2Ref%2CCircle2Ref"
     title="contains(self, other: Circle2Ref): bool"><wbr />contains<span class="attachedType">Circle2Ref</span></a></li>
+  <li><a class="reference" href="#contains%2CCircle2Ref%2CVector2Ref%2CVector2Ref"
+    title="contains(self: Circle2Ref; a, b: Vector2Ref): bool"><wbr />contains<span class="attachedType">Circle2Ref</span></a></li>
   <li><a class="reference" href="#%24%2CCircle2Ref"
     title="`$`(self: Circle2Ref): string"><wbr />`$`<span class="attachedType">Circle2Ref</span></a></li>
 
@@ -217,6 +219,13 @@ Returns true, if <tt class="docutils literal"><span class="pre">vec2</span></tt>
 Returns true, if <tt class="docutils literal"><span class="pre">self</span></tt> intersects with <tt class="docutils literal"><span class="pre">other</span></tt> circle.
 
 </dd>
+<a id="contains,Circle2Ref,Vector2Ref,Vector2Ref"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CCircle2Ref%2CVector2Ref%2CVector2Ref"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle2.html#Circle2Ref"><span class="Identifier">Circle2Ref</span></a><span class="Other">;</span> <span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="$,Circle2Ref"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#%24%2CCircle2Ref"><span class="Identifier">`$`</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle2.html#Circle2Ref"><span class="Identifier">Circle2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -234,7 +243,7 @@ Returns true, if <tt class="docutils literal"><span class="pre">self</span></tt>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 06:28:52 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 14:35:11 UTC</small>
       </div>
     </div>
   </div>
