--- a/nodesnim/core/vector2.html
+++ b/nodesnim/core/vector2.html
@@ -151,6 +151,8 @@ function main() {
     title="directionTo(a, b: Vector2Ref): Vector2Ref"><wbr />direction<wbr />To<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#directionTo%2CVector2Ref%2Cfloat%2Cfloat"
     title="directionTo(a: Vector2Ref; x, y: float): Vector2Ref"><wbr />direction<wbr />To<span class="attachedType">Vector2Ref</span></a></li>
+  <li><a class="reference" href="#intersects%2CVector2Ref%2CVector2Ref%2CVector2Ref%2CVector2Ref"
+    title="intersects(a, b, c, d: Vector2Ref): bool"><wbr />intersects<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#%2B%2CVector2Ref%2CVector2Ref"
     title="`+`(a, b: Vector2Ref): Vector2Ref"><wbr />`+`<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#-%2CVector2Ref%2CVector2Ref"
@@ -364,6 +366,13 @@ function main() {
 
 
 </dd>
+<a id="intersects,Vector2Ref,Vector2Ref,Vector2Ref,Vector2Ref"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#intersects%2CVector2Ref%2CVector2Ref%2CVector2Ref%2CVector2Ref"><span class="Identifier">intersects</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">,</span> <span class="Identifier">c</span><span class="Other">,</span> <span class="Identifier">d</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="+,Vector2Ref,Vector2Ref"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#%2B%2CVector2Ref%2CVector2Ref"><span class="Identifier">`+`</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -507,7 +516,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 06:28:51 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 14:35:11 UTC</small>
       </div>
     </div>
   </div>
