--- a/nodesnim/nodescontrol/rich_edit_text.html
+++ b/nodesnim/nodescontrol/rich_edit_text.html
@@ -142,6 +142,14 @@ function main() {
     title="getTextSize(self: RichEditTextPtr): Vector2Ref"><wbr />get<wbr />Text<wbr />Size<span class="attachedType">RichEditTextPtr</span></a></li>
   <li><a class="reference" href="#getLine.e%2CRichEditTextPtr"
     title="getLine(self: RichEditTextPtr): int"><wbr />get<wbr />Line<span class="attachedType">RichEditTextPtr</span></a></li>
+  <li><a class="reference" href="#getCharPositionUnderMouse.e%2CRichEditTextPtr"
+    title="getCharPositionUnderMouse(self: RichEditTextPtr): int"><wbr />get<wbr />Char<wbr />Position<wbr />Under<wbr />Mouse<span class="attachedType">RichEditTextPtr</span></a></li>
+  <li><a class="reference" href="#getCharUnderMouse.e%2CRichEditTextPtr"
+    title="getCharUnderMouse(self: RichEditTextPtr): ColorCharRef"><wbr />get<wbr />Char<wbr />Under<wbr />Mouse<span class="attachedType">RichEditTextPtr</span></a></li>
+  <li><a class="reference" href="#getWordPositionUnderMouse.e%2CRichEditTextPtr"
+    title="getWordPositionUnderMouse(self: RichEditTextPtr): tuple[startpos, endpos: int]"><wbr />get<wbr />Word<wbr />Position<wbr />Under<wbr />Mouse<span class="attachedType">RichEditTextPtr</span></a></li>
+  <li><a class="reference" href="#getWordUnderMouse.e%2CRichEditTextPtr"
+    title="getWordUnderMouse(self: RichEditTextPtr): ColorTextRef"><wbr />get<wbr />Word<wbr />Under<wbr />Mouse<span class="attachedType">RichEditTextPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CRichEditTextPtr%2CGLfloat%2CGLfloat"
     title="draw(self: RichEditTextPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">RichEditTextPtr</span></a></li>
   <li><a class="reference" href="#duplicate.e%2CRichEditTextPtr%2CRichEditTextObj"
@@ -257,6 +265,38 @@ Returns text size.
 Returns current caret line.
 
 </dd>
+<a id="getCharPositionUnderMouse.e,RichEditTextPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#getCharPositionUnderMouse.e%2CRichEditTextPtr"><span class="Identifier">getCharPositionUnderMouse</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Returns char position under mouse.
+
+</dd>
+<a id="getCharUnderMouse.e,RichEditTextPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#getCharUnderMouse.e%2CRichEditTextPtr"><span class="Identifier">getCharUnderMouse</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/color_text.html#ColorCharRef"><span class="Identifier">ColorCharRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Returns char under mouse
+
+</dd>
+<a id="getWordPositionUnderMouse.e,RichEditTextPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#getWordPositionUnderMouse.e%2CRichEditTextPtr"><span class="Identifier">getWordPositionUnderMouse</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Keyword">tuple</span><span class="Other">[</span>
+    <span class="Identifier">startpos</span><span class="Other">,</span> <span class="Identifier">endpos</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">]</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Returns words under mouse. Returns (-1, -1), if under mouse no founds words.
+
+</dd>
+<a id="getWordUnderMouse.e,RichEditTextPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#getWordUnderMouse.e%2CRichEditTextPtr"><span class="Identifier">getWordUnderMouse</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/color_text.html#ColorTextRef"><span class="Identifier">ColorTextRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Returns words under mouse.
+
+</dd>
 <a id="draw.e,RichEditTextPtr,GLfloat,GLfloat"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CRichEditTextPtr%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
@@ -314,7 +354,7 @@ Changes RichEditText text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 14:35:36 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 17:05:29 UTC</small>
       </div>
     </div>
   </div>
