--- a/nodesnim/nodes2d/kinematic_body2d.html
+++ b/nodesnim/nodes2d/kinematic_body2d.html
@@ -134,6 +134,8 @@ function main() {
     title="getCollideCount(self: KinematicBody2DPtr): int"><wbr />get<wbr />Collide<wbr />Count<span class="attachedType">KinematicBody2DPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CKinematicBody2DPtr%2CGLfloat%2CGLfloat"
     title="draw(self: KinematicBody2DPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">KinematicBody2DPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CKinematicBody2DPtr%2CKinematicBody2DObj"
+    title="duplicate(self: KinematicBody2DPtr; obj: var KinematicBody2DObj): KinematicBody2DPtr"><wbr />duplicate<span class="attachedType">KinematicBody2DPtr</span></a></li>
   <li><a class="reference" href="#isCollide.e%2CKinematicBody2DPtr"
     title="isCollide(self: KinematicBody2DPtr): bool"><wbr />is<wbr />Collide<span class="attachedType">KinematicBody2DPtr</span></a></li>
   <li><a class="reference" href="#moveAndCollide.e%2CKinematicBody2DPtr%2CVector2Ref"
@@ -240,6 +242,14 @@ Checks collision count.
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
+<a id="duplicate.e,KinematicBody2DPtr,KinematicBody2DObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CKinematicBody2DPtr%2CKinematicBody2DObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="kinematic_body2d.html#KinematicBody2DObj"><span class="Identifier">KinematicBody2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Duplicates KinematicBody2D and create a new KinematicBody2D pointer.
+
+</dd>
 <a id="isCollide.e,KinematicBody2DPtr"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#isCollide.e%2CKinematicBody2DPtr"><span class="Identifier">isCollide</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
@@ -266,7 +276,7 @@ Moves and checks collision
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 14:36:02 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 17:05:55 UTC</small>
       </div>
     </div>
   </div>
